[gd_scene load_steps=4 format=3 uid="uid://cfyt2rf60e4in"]

[ext_resource type="Script" uid="uid://c5k4fkfk7uaqa" path="res://scenes/ui/audio_settings_Control.gd" id="1_yhfnd"]
[ext_resource type="AudioStream" uid="uid://drxydiwaca2ca" path="res://Assety/Audio/Music/logo-sfx-316751.mp3" id="2_3glfk"]
[ext_resource type="Texture2D" uid="uid://mypdllmmobv5" path="res://Assety/Menu/Exit/close.png" id="3_7t4dr"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhfnd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39607844)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="Music_Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Muzyka"

[node name="Music_HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX_Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Efekty"

[node name="SFX_HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="testowa_muzyczka_sliderMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3glfk")
volume_db = -23.853
autoplay = true
bus = &"Music"

[node name="Close_Settings" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1080.0
offset_top = 48.0
offset_right = 1105.0
offset_bottom = 73.0
texture_normal = ExtResource("3_7t4dr")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/Music_HSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SFX_HSlider" to="." method="_on_sfx_h_slider_value_changed"]
[connection signal="pressed" from="Close_Settings" to="." method="_on_close_settings_pressed"]
